<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/default_profile_icon"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorPrimaryDark"/>

    <EditText
    android:id="@+id/user_name_input"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/profile_image"
    android:layout_marginTop="20dp"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp"
    android:hint="@string/username_settings_text"
    android:textAlignment="center"
    />

    <EditText
        android:id="@+id/gym_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name_input"
        android:layout_marginTop="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/current_gym_text"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/update_settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gym_name_input"
        android:layout_marginTop="40dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:text="@string/update_settings_button_text"
        android:textAllCaps="false"
        />

</RelativeLayout>