<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip" >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/icon"
        android:layout_width="50dp"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="6dip"
        android:contentDescription="@string/to_do"
        android:src="@drawable/place_holder"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorPrimary"/>

<!--    <ImageView-->
<!--        android:id="@+id/icon"-->
<!--        android:layout_width="40dp"-->
<!--        android:layout_height="fill_parent"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:layout_marginEnd="6dip"-->
<!--        android:contentDescription="TODO"-->
<!--        android:src="@drawable/place_holder" />-->

    <TextView
        android:id="@+id/recent_message"
        android:layout_width="fill_parent"
        android:layout_height="26dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/icon"
        android:layout_marginStart="10dp"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:text="@string/recent_message_text"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/contact_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/recent_message"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toEndOf="@id/icon"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:text="@string/contact_name_text"
        android:textSize="16sp"/>

</RelativeLayout>