<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/login_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/place_holder"
                android:scaleType="fitXY">
            </ImageView>

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/login_image"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="4dp"
                android:hint="@string/email_hint"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress">
            </EditText>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/login_email"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="4dp"
                android:hint="@string/password_hint"
                android:importantForAutofill="no"
                android:inputType="textPassword">
            </EditText>

            <TextView
                android:id="@+id/forget_password_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/login_password"
                android:layout_marginTop="2dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="23dp"
                android:textAlignment="textEnd"
                android:importantForAutofill="no"
                android:text="@string/forget_password_link_text"
                android:textSize="17sp"
                android:textColor="@color/colorPrimaryDark">
            </TextView>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forget_password_link"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="4dp"
                android:text="@string/login_button_text"
                android:textColor="@android:color/white"
                android:textAllCaps="true"
                android:background="@color/colorPrimaryDark">
            </Button>

            <TextView
                android:id="@+id/register_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/login_button"
                android:layout_marginTop="2dp"
                android:textAlignment="center"
                android:importantForAutofill="no"
                android:text="@string/register_link_text"
                android:textSize="17sp"
                android:textColor="@color/colorPrimaryDark">
            </TextView>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>